--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dpdk (2.0.0-3) unstable; urgency=low
+
+  * enable RTE_PCI_CONFIG and RTE_PCI_EXTENDED_TAG.
+
+ -- Nikita Kozlov <nikita@gandi.net>  Tue, 11 Aug 2015 17:38:16 +0200
+
 dpdk (2.0.0-2) unstable; urgency=low
 
   * add dpdk_nic_bind in /usr/bin .
