--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dpdk (2.0.0-4) unstable; urgency=low
+
+  * force the use of intrinsics.
+
+ -- Nikita Kozlov <nikita@gandi.net>  Mon, 17 Aug 2015 16:00:16 +0200
+
 dpdk (2.0.0-3) unstable; urgency=low
 
   * enable RTE_PCI_CONFIG and RTE_PCI_EXTENDED_TAG.
