--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dpdk (2.0.0-5) unstable; urgency=low
+
+  * rename script for removing collisions.
+
+ -- Nikita Kozlov <nikita@gandi.net>  Tue, 25 Aug 2015 02:00:16 +0200
+
 dpdk (2.0.0-4) unstable; urgency=low
 
   * force the use of intrinsics.
