--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dpdk (2.1.0-4) unstable; urgency=low
+
+  * fix rxmax value for rx queues.
+
+ -- Nikita Kozlov <nikita@gandi.net>  Wed, 09 Sep 2015 00:03:16 +0200
+
 dpdk (2.1.0-3) unstable; urgency=low
 
   * add debug packages.
