--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dpdk (2.1.0-5) unstable; urgency=low
+
+  * Backport LPM bug fix from yuexin.
+
+ -- Nikita Kozlov <nikita@gandi.net>  Fri, 23 Oct 2015 12:26:16 +0200
+
 dpdk (2.1.0-4) unstable; urgency=low
 
   * fix rxmax value for rx queues.
